# bamboorules

./: LICENSE  Pipfile  README.md  setup.cfg
.circleci/: config.yml
bamboorules/: engine.py
