[metadata]
name = Bamboo Rules
author = Thibaud Nesztler
author-email = thibaud@nesztler.com
summary = JSON-logic alongside Pandas
license = MIT
description-file = README.md
home-page = https://github.com/tnesztler/bamboorules
requires-python = >=3.8
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[files]
packages = 
    bamboorules